findbugs WMI_WRONG_MAP_ITERATOR
svn path=/dasCore/community/autoplot2011/trunk/; revision=7009